--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "react-use": "^17.2.4",
     "redux": "^4.1.0",
     "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.3.0",
     "socket.io-client": "^4.1.3",
     "web-vitals": "^1.1.2"
   },
