--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "concurrently \"nodemon node index.js\" \"cd frontend && npm start\"",
+    "server": "nodemon node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -13,6 +14,7 @@
     "concurrently": "^6.2.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "socket.io": "^4.1.3"
+    "socket.io": "^4.1.3",
+    "uuid": "^8.3.2"
   }
 }
