--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "concurrently \"nodemon node index.js\" \"cd frontend && npm start\"",
-    "server": "nodemon node index.js",
+    "start": "concurrently \"nodemon --delay 500ms node index.js\" \"cd frontend && npm start\"",
+    "server": "nodemon --delay 500ms node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "socket.io": "^4.1.3",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "wrtc": "^0.4.7"
   }
 }
