--- a/package.json
+++ b/package.json
@@ -18,5 +18,9 @@
     "socket.io": "^4.1.3",
     "uuid": "^8.3.2",
     "wrtc": "^0.4.7"
+  },
+  "engines": {
+    "node": "16.4.2",
+    "npm": "7.18.1"
   }
 }
