--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "express": "^4.17.1",
     "socket.io": "^4.1.3",
     "uuid": "^8.3.2",
-    "wrtc": "^0.4.7"
+    "wrtc": "^0.4.7",
+    "node-pre-gyp": "0.17.0"
   },
   "engines": {
     "node": "16.4.2",
