--- a/package.json
+++ b/package.json
@@ -4,21 +4,24 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "concurrently \"nodemon --delay 500ms node index.js\" \"cd frontend && npm start\"",
-    "server": "nodemon --delay 500ms node index.js",
+    "start": "node index.js",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install npm && run build",
+    "dev-start": "concurrently \"nodemon --delay 500ms node index.js\" \"cd frontend && npm start\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Aditya Jha",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
-    "concurrently": "^6.2.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "socket.io": "^4.1.3",
     "uuid": "^8.3.2",
     "wrtc": "^0.4.7",
     "node-pre-gyp": "0.17.0"
+  },
+  "devDependencies": {
+    "concurrently": "^6.2.0"
   },
   "engines": {
     "node": "16.4.2",
