--- a/package.json
+++ b/package.json
@@ -5,20 +5,20 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false cd frontend && npm install && npm run build",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false cd frontend && yarn add . && yarn run build",
     "dev-start": "concurrently \"nodemon --delay 500ms node index.js\" \"cd frontend && npm start\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Aditya Jha",
   "license": "ISC",
   "dependencies": {
+    "@mapbox/node-pre-gyp": "^1.0.5",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "socket.io": "^4.1.3",
     "uuid": "^8.3.2",
-    "wrtc": "^0.4.7",
-    "node-pre-gyp": "0.17.0"
+    "wrtc": "^0.4.7"
   },
   "devDependencies": {
     "concurrently": "^6.2.0"
