--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@craco/craco": "^6.2.0",
+    "@craco/craco": "^5.9.0",
     "@headlessui/react": "^1.3.0",
     "@heroicons/react": "^1.0.2",
     "@testing-library/jest-dom": "^5.14.1",
@@ -14,7 +14,7 @@
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^4.0.3",
     "react-use": "^17.2.4",
     "redux": "^4.1.0",
     "redux-devtools-extension": "^2.13.9",
