--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false cd frontend && npm install && npm run build",
-    "dev-start": "concurrently \"nodemon --delay 500ms node index.js\" \"cd frontend && npm start\"",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix frontend && npm run build --prefix frontend",
+    "dev": "concurrently \"nodemon --delay 500ms node index.js\" \"cd frontend && npm start\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Aditya Jha",
@@ -18,9 +18,7 @@
     "express": "^4.17.1",
     "socket.io": "^4.1.3",
     "uuid": "^8.3.2",
-    "wrtc": "^0.4.7"
-  },
-  "devDependencies": {
+    "wrtc": "^0.4.7",
     "concurrently": "^6.2.0"
   },
   "engines": {
