--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node index.js",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix frontend && npm run build --prefix frontend",
-    "dev": "concurrently \"nodemon --delay 500ms node index.js\" \"cd frontend && npm start\"",
+    "dev": "concurrently \"nodemon node index.js\" \"cd frontend && npm start\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Aditya Jha",
