--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "nodemon index.js",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix frontend && npm run build --prefix frontend",
     "dev": "concurrently \"nodemon node index.js\" \"cd frontend && npm start\"",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -13,12 +13,9 @@
   "license": "ISC",
   "dependencies": {
     "@mapbox/node-pre-gyp": "^1.0.5",
-    "body-parser": "^1.19.0",
-    "cors": "^2.8.5",
     "express": "^4.17.1",
     "socket.io": "^4.1.3",
     "uuid": "^8.3.2",
-    "wrtc": "^0.4.7",
     "concurrently": "^6.2.0"
   },
   "engines": {
