--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "socket.io-client": "^4.1.3",
     "socket.io-mock": "^1.3.2",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.7",
+    "uuid": "^8.3.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
