--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -20,6 +20,6 @@
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#faebd7",
-  "background_color": "#faebd7"
+  "theme_color": "#f1f5f9",
+  "background_color": "#f1f5f9"
 }
