--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
+    "framer-motion": "^4.1.17",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
@@ -25,6 +26,7 @@
     "simple-peer": "^9.11.0",
     "socket.io-client": "^4.1.3",
     "socket.io-mock": "^1.3.2",
+    "styled-components": "^5.3.1",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.7",
     "uuid": "^8.3.2",
     "web-vitals": "^1.1.2"
