--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
   "license": "ISC",
   "dependencies": {
     "@mapbox/node-pre-gyp": "^1.0.5",
+    "concurrently": "^6.2.0",
     "express": "^4.17.1",
+    "firebase-admin": "^9.12.0",
+    "redis": "^4.0.0-rc.2",
+    "redis-modules-sdk": "^1.0.0",
     "socket.io": "^4.1.3",
-    "uuid": "^8.3.2",
-    "concurrently": "^6.2.0"
+    "uuid": "^8.3.2"
   },
   "engines": {
     "node": "16.4.2",
