--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@mapbox/node-pre-gyp": "^1.0.5",
     "concurrently": "^6.2.0",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "firebase-admin": "^9.12.0",
     "redis": "^4.0.0-rc.2",
