--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.21.1",
     "firebase": "^9.1.1",
     "framer-motion": "^4.1.17",
+    "mediasoup-client": "^3.6.45",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-firebase-hooks": "^4.0.0",
