--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "concurrently": "^6.2.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-async-handler": "^1.1.4",
     "firebase-admin": "^9.12.0",
+    "mediasoup": "^3.9.2",
     "redis": "^4.0.0-rc.2",
     "redis-modules-sdk": "^1.0.0",
     "socket.io": "^4.1.3",
